infrastructure/zipkin/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zipkin
  namespace: infrastructure
  labels:
    app: zipkin
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: zipkin-tls
    hosts:
      - zipkin.minikube
  rules:
  - host: zipkin.minikube
    http:
      paths:
      - backend:
          serviceName: zipkin
          servicePort: www
